force-app/main/default/objects/NCMT_Crew_Master__c/NCMT_Crew_Master__c.object-meta.xml
<CustomObject>
    <label>NCMT Crew Master</label>
    <nameField>
        <label>Crew Master Key</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NCMT Crew Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>