force-app/main/default/objects/NCMT_Crew_Master__c/fields/Total_Equipment_Rental_per_Day__c.field-meta.xml
<CustomField>
    <fullName>Total_Equipment_Rental_per_Day__c</fullName>
    <label>Total Equipment Rental per Day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>