force-app/main/default/objects/NCMT_Crew_Master__c/fields/Total_Hourly_Rate_for_Crew__c.field-meta.xml
<CustomField>
    <fullName>Total_Hourly_Rate_for_Crew__c</fullName>
    <label>Total Hourly Rate for Crew</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>