force-app/main/default/objects/NCMT_Crew_Master__c/fields/Total_Labor_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Labor_Hours__c</fullName>
    <label>Total Labor Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>