force-app/main/default/objects/NCMT_Crew_Master__c/listViews/FY_2020.listView-meta.xml
<ListView>
    <fullName>FY_2020</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>C14</value>
    </filters>
    <label>FY-2020</label>
</ListView>